fix: added email env vars

--- a/index.html
+++ b/index.html
@@ -2,9 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logowithoutbg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kaif zakey</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Kaif Zakey - Full Stack Developer | React, Node.js, TypeScript Portfolio</title>
+    <meta name="title" content="Kaif Zakey - Full Stack Developer | React, Node.js, TypeScript Portfolio" />
+    <meta name="description" content="Professional full-stack developer specializing in React, Node.js, and TypeScript. View my portfolio of modern web applications, innovative projects, and development expertise." />
+    <meta name="keywords" content="full stack developer, react developer, nodejs developer, typescript, web development, portfolio, frontend developer, backend developer, javascript, software engineer" />
+    <meta name="author" content="Kaif Zakey" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kaifzakey.dev/" />
+    <meta property="og:title" content="Kaif Zakey - Full Stack Developer | React, Node.js, TypeScript Portfolio" />
+    <meta property="og:description" content="Professional full-stack developer specializing in React, Node.js, and TypeScript. View my portfolio of modern web applications and innovative projects." />
+    <meta property="og:image" content="./src/assets/logowithoutbg.png" />
+    <meta property="og:site_name" content="Kaif Zakey Portfolio" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://kaifzakey.dev/" />
+    <meta property="twitter:title" content="Kaif Zakey - Full Stack Developer | React, Node.js, TypeScript Portfolio" />
+    <meta property="twitter:description" content="Professional full-stack developer specializing in React, Node.js, and TypeScript. View my portfolio of modern web applications and innovative projects." />
+    <meta property="twitter:image" content="./src/assets/logowithoutbg.png" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="theme-color" content="#6366f1" />
+    <meta name="msapplication-TileColor" content="#6366f1" />
+    <meta name="application-name" content="Kaif Zakey Portfolio" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://kaifzakey.dev/" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logowithoutbg.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/logowithoutbg.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/logowithoutbg.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/logowithoutbg.png" />
   </head>
   <body>
     <div id="root"></div>
